fixed overflow on house cards

--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -53,6 +53,10 @@
     background-color: white;
 }
 
+.thumbnail-container {
+    overflow: hidden;
+}
+
 .card-thumbnail {
     z-index: 9;
     margin: 0 auto;
